--- a/src/rabbit/manifests/storageclass.yaml
+++ b/src/rabbit/manifests/storageclass.yaml
@@ -2,11 +2,5 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: standard
-provisioner: kubernetes.io/aws-ebs
-parameters:
-  type: gp2
-reclaimPolicy: Retain
-allowVolumeExpansion: true
-mountOptions:
-  - debug
+provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
